[package]
name = "passafe"
version = "1.0.1"
authors = ["Gokul2406 <gokulpbharathan89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home="0.5.3"
serde_json = "1.0.64"
serde = {version =  "1.0.126", features = ["derive"]}
bcrypt = "0.10.1"
magic-crypt = "3.1.8"
rpassword = "5.0.1"
colored = "2.0.0"
